--- a/Resources/public/paella/player/resources/style/style_dark_small.css
+++ b/Resources/public/paella/player/resources/style/style_dark_small.css
@@ -101,7 +101,7 @@ i.button-icon.icon-screen {
   font-size: 14.64px;
   padding-left: 0px;
 }
-.play-button-on-screen {
+button.play-button-on-screen {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -114,6 +114,7 @@ i.button-icon.icon-screen {
   z-index: 50;
   width: 100%;
   height: 100%;
+  background-color: transparent;
 }
 .play-button-on-screen .play-icon {
   width: 300px;
@@ -2399,6 +2400,12 @@ a.btn {
 .icon-IcoMoon:before {
   content: "\eb26";
 }
+.buttonPlugin.flexSkip_Rewind_10 {
+  background-position: -205% 22%;
+}
+.buttonPlugin.flexSkip_Forward_30 {
+  background-position: -200% 22%;
+}
 .playButtonOnScreen_Always {
   position: absolute;
   opacity: 0.7;
@@ -2423,12 +2430,6 @@ a.btn {
 .play-button-on-screen.dimmed .play-icon:hover {
   opacity: 1;
 }
-.buttonPlugin.flexSkip_Rewind_10 {
-  background-position: -205% 22%;
-}
-.buttonPlugin.flexSkip_Forward_30 {
-  background-position: -200% 22%;
-}
 .integratedDurationButton {
   width: 112px !important;
   color: white !important;
@@ -2439,6 +2440,37 @@ a.btn {
 }
 .integratedDurationButton:hover {
   background-color: transparent !important;
+}
+.buttonPlugin.playlistPlugin {
+  background-position: -88.3% -85.5%;
+  background-image: url(../images/paella_icons_light.png);
+  background-size: 720px 360px;
+}
+.buttonPluginPopUp.playlistPlugin {
+  background-image: none;
+  min-width: 40px;
+  width: 500%;
+  min-height: 40px;
+  max-height: 150px;
+  overflow: auto;
+  text-align: left;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton {
+  cursor: pointer;
+  text-align: left;
+  text-transform: capitalize;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton:hover {
+  background-color: #FF4C4C;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton.playing {
+  font-style: italic;
+  font-weight: bold;
+  padding-left: 15px;
 }
 .buttonPlugin.arrowSlideNavidator.nextButton {
   pointer-events: all !important;
@@ -4034,9 +4066,6 @@ input[type=range]:focus::-ms-fill-upper {
 .related-video-container .related-video-link p {
   width: 100%;
   text-align: center;
-}
-.buttonPlugin.showEditorButton {
-  pointer-events: all;
 }
 .buttonPluginPopUp.videoZoomToolbar {
   width: 50px;
