--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -30,8 +30,8 @@
         }
         {% endif %}
 
-        {% if intro %}
-            #introContainer {
+        {% if intro or tail %}
+            #introContainer, #tailContainer {
                 position: absolute;
                 top: 0;
                 right: 0;
@@ -41,7 +41,7 @@
                 z-index: 88888;
             }
 
-            #intro {
+            #intro, #tail {
                 width: 100%;
                 height: 100%;
             }
@@ -73,6 +73,12 @@
 
             .playButtonOnScreenIcon {
                 height: 100%;
+            }
+
+            @media(max-width: 767px) {
+                #skipContainer {
+                    bottom: 1.5em;
+                }
             }
         {% endif %}
 
@@ -108,7 +114,7 @@
         {% endif %}
 
         $(document).bind(paella.events.loadComplete, function (event, params) {
-            {% if (intro and not (app.request.headers.get('user-agent') matches '/Mobi/'))
+            {% if intro
                 or (autostart is defined and autostart == 'true') %}
                 if (!base.userAgent.browser.IsMobileVersion && !document.querySelector("#introContainer")){
                     setTimeout(function () {
@@ -125,106 +131,143 @@
             setTimeout(function () {
                 setPaellaProfile("{{ getPaellaLayout(multimediaObject, app.request) }}");
             }, 300);
-
         });
 
-        {% if intro and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
-            const container= document.querySelector("#playerContainer");
-            const intro = document.createElement("video");
-            const introContainer = document.createElement("div");
-            const skipContainer = document.createElement("div");
-            const overlay = document.createElement("overlay");
+        function playPauseCanvas(mainContainer, video){
+            const icon = document.createElement('canvas');
+            icon.className = 'playButtonOnScreenIcon';
+            icon.style.display = (video.autoplay) ? 'none' : 'block';
+            if(/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
+                icon.style.display = 'block';
+            }
 
-            intro.src = "{{ absolute_url(intro) }}";
-            intro.poster = "{{ multimediaObject|first_url_pic(true) }}";
-            intro.id = "intro";
-            intro.addEventListener('ended', onEndedVideo);
-            intro.autoplay = "{{ autostart != 'false' }}";
-            intro.muted= base.userAgent.browser.IsMobileVersion;
+            mainContainer.appendChild(icon);
+
+            setTimeout(function(){
+                const width = jQuery(mainContainer).innerWidth();
+                const height = jQuery(mainContainer).innerHeight();
+
+                icon.width = width;
+                icon.height = height;
+
+                const iconSize = (width<height) ? width/3 : height/3;
+
+                const ctx = icon.getContext('2d');
+
+                ctx.translate((width-iconSize)/2, (height-iconSize)/2);
+
+                ctx.beginPath();
+                ctx.arc(iconSize/2, iconSize/2 ,iconSize/2, 0, 2*Math.PI, true);
+                ctx.closePath();
+
+                ctx.strokeStyle = 'white';
+                ctx.lineWidth = 10;
+                ctx.stroke();
+                ctx.fillStyle = '#8f8f8f';
+                ctx.fill();
+
+                ctx.beginPath();
+                ctx.moveTo(iconSize/3, iconSize/4);
+                ctx.lineTo(3*iconSize/4, iconSize/2);
+                ctx.lineTo(iconSize/3, 3*iconSize/4);
+                ctx.lineTo(iconSize/3, iconSize/4);
+                ctx.closePath();
+                ctx.fillStyle = 'white';
+                ctx.fill();
+
+                ctx.stroke();
+            }, 100);
+
+            $(mainContainer).bind('click', function () {
+                if(video.paused){
+                    icon.style.display = 'none';
+                    video.play();
+                }else{
+                    icon.style.display = 'block';
+                    video.pause();
+                }
+            });
+        }
+
+        function introOrTailVideo(typeVideo) {
+            const container= document.querySelector("#playerContainer");
+            const overlay = document.createElement("overlay");
+            const skipContainer = document.createElement("div");
+            const video = document.createElement("video");
+            const videoContainer = document.createElement("div");
+
+            if (typeVideo == "intro") {
+                {% if intro %}
+                    video.src = "{{ absolute_url(track_url(intro)) }}";
+                    video.poster = "{{ multimediaObject|first_url_pic(true) }}";
+                {% endif %}
+            } else {
+                {% if tail %}
+                    video.src = "{{ absolute_url(track_url(tail)) }}";
+                {% endif %}
+            }
+
+            video.id = (typeVideo == "intro") ? 'intro' : 'tail';
+            video.addEventListener('ended', onEndedVideo);
+            video.autoplay = (typeVideo == "intro") ?  "{{ autostart != 'false' }}" : "true";
+            video.muted = base.userAgent.browser.IsMobileVersion;
 
             skipContainer.id = "skipContainer";
-            introContainer.id = "introContainer";
+            videoContainer.id = (typeVideo == "intro") ? 'introContainer' : 'tailContainer';
             overlay.id = "overlay";
             skipContainer.addEventListener("click", onEndedVideo);
 
-            skipContainer.innerHTML = '{{ "Next Up" | trans}}';
+            skipContainer.innerHTML = (typeVideo == "intro") ? '{{ "Next up" | trans }}' : '{{ "Finish" | trans }}';
+            
+            if(!document.querySelector("#" + video.id)) {
+                videoContainer.appendChild(video);
+                videoContainer.appendChild(skipContainer);
+                videoContainer.appendChild(overlay);
+                container.appendChild(videoContainer);
+            }
 
-            introContainer.appendChild(intro);
-            introContainer.appendChild(skipContainer);
-            introContainer.appendChild(overlay);
-            container.appendChild(introContainer);
-
-
-            playPauseCanvas(overlay, intro);
-            loadPaella('playerContainer', '{{ multimediaObject.id }}');
+            playPauseCanvas(overlay, video);
 
             function onEndedVideo() {
-                container.removeChild(introContainer);
-                if(paella.player.videoLoader.loadStatus){
-                    setTimeout(function () {
-                        paella.player.play();
-                    }, 300);
-                }
-            }
-
-            function playPauseCanvas(mainContainer, video){
-                const icon = document.createElement('canvas');
-                icon.className = 'playButtonOnScreenIcon';
-                icon.style.display = "{{ autostart != 'false' ? 'none' : 'block' }}";
-                if(/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
-                    icon.style.display = 'block';
-                }
-
-                mainContainer.appendChild(icon);
-
-                setTimeout(function(){
-                    const width = jQuery(mainContainer).innerWidth();
-                    const height = jQuery(mainContainer).innerHeight();
-
-                    icon.width = width;
-                    icon.height = height;
-
-                    const iconSize = (width<height) ? width/3 : height/3;
-
-                    const ctx = icon.getContext('2d');
-
-                    ctx.translate((width-iconSize)/2, (height-iconSize)/2);
-
-                    ctx.beginPath();
-                    ctx.arc(iconSize/2, iconSize/2 ,iconSize/2, 0, 2*Math.PI, true);
-                    ctx.closePath();
-
-                    ctx.strokeStyle = 'white';
-                    ctx.lineWidth = 10;
-                    ctx.stroke();
-                    ctx.fillStyle = '#8f8f8f';
-                    ctx.fill();
-
-                    ctx.beginPath();
-                    ctx.moveTo(iconSize/3, iconSize/4);
-                    ctx.lineTo(3*iconSize/4, iconSize/2);
-                    ctx.lineTo(iconSize/3, 3*iconSize/4);
-                    ctx.lineTo(iconSize/3, iconSize/4);
-                    ctx.closePath();
-                    ctx.fillStyle = 'white';
-                    ctx.fill();
-
-                    ctx.stroke();
-                }, 100);
-
-                $(mainContainer).bind('click', function () {
-                    if(video.paused){
-                        icon.style.display = 'none';
-                        video.play();
-                    }else{
-                        icon.style.display = 'block';
-                        video.pause();
+                container.removeChild(videoContainer);
+                if (typeVideo == "intro") {
+                    if(paella.player.videoLoader.loadStatus){
+                        setTimeout(function () {
+                            paella.player.play();
+                        }, 300);
                     }
-                });
+                }
             }
+        }
+
+        var firstPlay = false;
+
+        {% if intro %}
+            introOrTailVideo("intro");
+            loadPaella('playerContainer', '{{ multimediaObject.id }}');
         {% else %}
             loadPaella('playerContainer', '{{ multimediaObject.id }}');
         {% endif %}
+
+        {% if multimediaObject.getProperty('soft-editing-duration') %}
+            paella.events.bind(paella.events.ended, function (event) {
+        {% else %}
+            paella.events.bind(paella.events.endVideo, function (event) {
+        {% endif %}
+            {% if tail %}
+                    introOrTailVideo("tail");
+            {% endif %}
+            firstPlay = true;
+            paella.events.bind(paella.events.play, function (event) {
+                {% if intro %}
+                    if (firstPlay) {
+                        introOrTailVideo("intro");
+                        paella.player.pause();
+                        firstPlay = false;
+                    }
+                {% endif %}
+            });
+        });
 
         function setPaellaProfile(profileName) {
             $('.viewModeItemButton').removeClass('selected');
@@ -232,5 +275,6 @@
             paella.player.setProfile(profileName);
             base.cookies.set("lastProfile", profileName);
         }
+    </script>
     </script>
 {% endblock %}
