TTK-25646: Show play button on intro video with autostart

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -209,7 +209,7 @@
 
             video.id = (typeVideo == "intro") ? 'intro' : 'tail';
             video.addEventListener('ended', onEndedVideo);
-            video.autoplay = (typeVideo == "intro") ?  "{{ autostart != 'false' }}" : "true";
+            video.autoplay = (typeVideo == "intro") ?  "{{ autostart }}" : "true";
             video.muted = base.userAgent.browser.IsMobileVersion;
 
             skipContainer.id = "skipContainer";
