--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -9,14 +9,16 @@
 
 {% endblock %}
 {% block javascripts %}
-   <script type="text/javascript" src="javascript/base.js"></script>
-   <script type="text/javascript" src="javascript/jquery.min.js"></script>
-   <script type="text/javascript" src="javascript/lunr.min.js"></script>
-   <script type="text/javascript" src="javascript/require.js"></script>
-   <script type="text/javascript" src="javascript/paella_player.js"></script>
-   <script type="text/javascript" src="../../assets/paella_start.js"></script>
-   <script type="text/javascript" src="../../assets/datadelegates.js"></script>
-   <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="javascript/swfobject.js"></script>
+  <script type="text/javascript" src="javascript/base.js"></script>
+  <script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
+  <script type="text/javascript" src="javascript/jquery.js"></script>
+  <script type="text/javascript" src="javascript/lunr.min.js"></script>
+  <script type="text/javascript" src="javascript/require.js"></script>
+  <script type="text/javascript" src="javascript/paella_player.js"></script>
+  <script type="text/javascript" src="../../assets/paella_start.js"></script>
+  <script type="text/javascript" src="../../assets/datadelegates.js"></script>
+  <script type="text/javascript" src="resources/bootstrap/js/bootstrap.min.js"></script>
 
 {% endblock%}
 {% block stylesheets %}
