--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -9,9 +9,9 @@
 
 {% endblock %}
 {% block javascripts %}
-  {{ encore_entry_script_tags('paella-player') }}
-  <script type="text/javascript" src="jquery.js"></script>
-
+{#  {{ encore_entry_script_tags('paella-player') }}#}
+{#  <script type="text/javascript" src="jquery.js"></script>#}
+    <script type="text/javascript" src="{{ asset('bundles/pumukitpaellaplayer/paella/dist/teltek-paella-player.js') }}"></script>
 {% endblock %}
 {% block stylesheets %}
 
