--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -93,8 +93,8 @@
         {% endif %}
     </style>
     <script>
-            loadPaellaPlayer('{{ multimediaObject.id }}');
-    {# 
+            {#loadPaellaPlayer('{{ multimediaObject.id }}');#}
+    {#
         localStorage.setItem('opencast_host', "{{ opencast_host }}");
         var isOpencast = "{{ multimediaObject.getProperty('opencast') }}";
         if(isOpencast) {
@@ -208,7 +208,7 @@
                     video.src = "{{ absolute_url(track_url(tail)) }}";
                 {% endif %}
             }
-            
+
             video.id = (typeVideo == "intro") ? 'intro' : 'tail';
             video.addEventListener('ended', onEndedVideo);
             video.autoplay = (typeVideo == "intro") ? "{{ autostart }}" : "true";
