--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -6,13 +6,13 @@
   {# THIS IS WHAT MAKES PAELLA WORK #}
   <base href="/bundles/pumukitpaellaplayer/paella/">
   {{ parent() }}
-
 {% endblock %}
+
 {% block javascripts %}
-{#  {{ encore_entry_script_tags('paella-player') }}#}
-{#  <script type="text/javascript" src="jquery.js"></script>#}
+    {{ parent() }}
     <script type="text/javascript" src="{{ asset('bundles/pumukitpaellaplayer/paella/dist/teltek-paella-player.js') }}"></script>
 {% endblock %}
+
 {% block stylesheets %}
 
   {# <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8"> #}
